Fix z-index on notification, leafmap, toast-container

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -25,7 +25,7 @@
             bottom:0;
             height:100%;
             left:0;
-            z-index: 1001;
+            z-index: 999;
             background-color: $primary-color;
 
             -webkit-transition: left .15s ease-in-out;
